# opengl_app

./: .gitattributes  CMakeLists.txt  README.txt
glad/: CMakeLists.txt
resources/: assets.hpp.in
resources/shaders/: fragment_shader.glsl  vertex_shader.glsl
sources/: CMakeLists.txt  main.cpp
sources/lib_example/: CMakeLists.txt
sources/lib_example/headers/: lib_example.hpp
sources/lib_example/sources/: lib_example.cpp
sources/shader_class/: CMakeLists.txt
sources/shader_class/headers/: shader_class.hpp
sources/shader_class/sources/: shader_class.cpp
stb_image/: CMakeLists.txt
